# Sakiko

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDPP.cmake
local/: local_records_here
src/: include.h  main.cpp  saki.cpp  saki.h
